WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
283508
[block-step-sizing] Adjusted margins not reflected in computed style
https://bugs.webkit.org/show_bug.cgi?id=283508
Summary
[block-step-sizing] Adjusted margins not reflected in computed style
Sammy Gill
Reported
2024-11-21 11:40:20 PST
If a box's margins are adjusted due to block step sizing, then the new values of those margins should be reflected in computed style. Currently, if the margin is a fixed value, but it gets adjusted, then we return the original fixed value
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-21 11:40:37 PST
<
rdar://problem/140361714
>
Sammy Gill
Comment 2
2024-11-21 13:50:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36973
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug