[block-step-sizing] Adjusted margins not reflected in computed style https://bugs.webkit.org/show_bug.cgi?id=283508 rdar://140361714

wip

Explanation of why this fixes the bug (OOPS!).

* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::zoomAdjustedPaddingPixelValue):
(WebCore::zoomAdjustedMarginPixelValue):
(WebCore::ComputedStyleExtractor::valueForPropertyInStyle const):
(WebCore::zoomAdjustedPaddingOrMarginPixelValue): Deleted.